# advent-of-code-2025

./: .clang-format  .gitignore  CMakeLists.txt  build-linux.sh  main.c
aoc_util/: array_list.c  array_list.h  puzzle_input.c  puzzle_input.h  string.c  string.h
solutions/: day_10_part_1.c  day_10_part_2.c  day_11_part_1.c  day_11_part_2.c  day_12_part_1.c  day_12_part_2.c  day_1_part_1.c  day_1_part_2.c  day_2_part_1.c  day_2_part_2.c  day_3_part_1.c  day_3_part_2.c  day_4_part_1.c  day_4_part_2.c  day_5_part_1.c  day_5_part_2.c  day_6_part_1.c  day_6_part_2.c  day_7_part_1.c  day_7_part_2.c  day_8_part_1.c  day_8_part_2.c  day_9_part_1.c  day_9_part_2.c  solution.c  solution.h
